--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 *::selection {
@@ -15,7 +16,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", cursive;
+  font-family: "Roboto", sans-serif;
   background: #161616;
   color: rgb(223, 223, 223);
   transition: 0.7s ease-in-out;
@@ -27,6 +28,7 @@ body {
 header {
   height: 100vh;
   padding: 16px;
+  position: relative;
 }
 
 .links {
@@ -103,8 +105,10 @@ a:hover::after {
 }
 
 .scroll-wrapper {
-  margin: 460px auto 0;
-  text-align: center;
+  position: absolute;
+  bottom: 14px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .scroll-wrapper a {
